--- a/src/perfui/templates/perfui/perf_result.html
+++ b/src/perfui/templates/perfui/perf_result.html
@@ -189,6 +189,12 @@
 			      <td>{{ client_number }}</td>
 			     </tr>
 			     {% endifequal %}
+			     
+			     <tr class="success">
+			      <td>Test Duration</td>
+			      <td>{{ test_duration }}</td>	 
+			     </tr>
+			     
 			  </tbody>
 			</table>
 			<p />
