--- a/src/perfui/templates/perfui/perf_result.html
+++ b/src/perfui/templates/perfui/perf_result.html
@@ -192,7 +192,7 @@
 			     
 			     <tr class="success">
 			      <td>Test Duration</td>
-			      <td>{{ test_duration }}</td>	 
+			      <td>{{ test_duration }} Seconds</td>	 
 			     </tr>
 			     
 			  </tbody>
