add vex performance test status monitor

--- a/src/perfui/templates/perfui/operation.html
+++ b/src/perfui/templates/perfui/operation.html
@@ -41,7 +41,7 @@
 		    }
 	    });
 	     
-	    setInterval("getVEXPerfTestStatus()", 3000);  
+	    setInterval("getVEXPerfTestStatus()", 30000);  
 	});
 	
 	function getVEXPerfTestStatus() {
@@ -54,11 +54,15 @@
             		//alert("id:"+data[o].id+" status:"+data[o].status );  
             		if (data[o].status == 0){
             			$("#vex_op_status_" + data[o].id).html("Running");
+            			$("#btn_start" + data[o].id).hide();
+            			$("#btn_stop" + data[o].id).show();
             		}else if (data[o].status == 1){
+            			$("#btn_stop_" + data[o].id).hide();
+            			$("#btn_start_" + data[o].id).show();
             			$("#vex_op_status_" + data[o].id).html("Stopped");
             		}else{
             		}
-                  } 
+                } 
             }  
         });  
     }  
@@ -73,7 +77,6 @@
 	
 	function operation(op_tag, op_id, btn_id, is_vex_operation, test_type){
 		var timeout = 120000;
-		
 		var btn = $("#" + btn_id);
 		btn.button('loading');
 		
@@ -93,6 +96,16 @@
 		   					    size: 'large'
 		   					});
 		   					btn.button('reset');
+		   					
+		   					if(op_tag='start'){
+		   						$("#vex_op_status_" + data[o].id).html("Running");
+		   						btn.hide();
+		   					}
+		   					
+		   					if(op_tag='stop'){
+		   						$("#vex_op_status_" + data[o].id).html("Stopped");
+		   						btn.hide();
+		   					}
             	        }
 	   				}else{
 	   					bootbox.alert({
@@ -176,10 +189,10 @@
 		            </td>
 		            <td class='mytd text-left'>
 		            	{% if vex_operation.start_command%}
-		            		<button type="button" id="btn_start_{{vex_operation.id}}" class="btn btn-success" data-loading-text="Starting..." autocomplete="off" onclick="operation('start','{{vex_operation.id}}','btn_start_{{vex_operation.id}}', 'true', '{{vex_operation.perf_config.test_type}}')">Start</button>
+		            		<button type="button" id="btn_start_{{vex_operation.id}}" class="btn btn-success" {% if vex_operation.status_flag %}style="display: none;"{%endif%} data-loading-text="Starting..." autocomplete="off" onclick="operation('start','{{vex_operation.id}}','btn_start_{{vex_operation.id}}', 'true', '{{vex_operation.perf_config.test_type}}')">Start</button>
 						{% endif %}
 						{% if vex_operation.stop_command %}
-						    <button type="button" id="btn_stop_{{vex_operation.id}}" class="btn btn-primary" data-loading-text="Stoping..." autocomplete="off" onclick="operation('stop','{{vex_operation.id}}','btn_stop_{{vex_operation.id}}', 'true', '{{vex_operation.perf_config.test_type}}')">Stop</button>
+						    <button type="button" id="btn_stop_{{vex_operation.id}}" class="btn btn-primary" {% if not vex_operation.status_flag %}style="display: none;"{%endif%} data-loading-text="Stoping..." autocomplete="off" onclick="operation('stop','{{vex_operation.id}}','btn_stop_{{vex_operation.id}}', 'true', '{{vex_operation.perf_config.test_type}}')">Stop</button>
 						{% endif%}
 						{% if vex_operation.result_collect_command %}
 							<button type="button" id="btn_result_{{vex_operation.id}}" class="btn btn-info" data-loading-text="Collecting..." onclick="operation('result','{{vex_operation.id}}','btn_result_{{vex_operation.id}}', 'true', '{{vex_operation.perf_config.test_type}}')">Result</button>
