--- a/src/perfui/templates/perfui/operation.html
+++ b/src/perfui/templates/perfui/operation.html
@@ -138,14 +138,14 @@
 	 <div class="caption">
 		<table id="vex_operations" data-toggle="table" class="table table-striped table-bordered table-hover">
 			<colgroup>
-				<col style="width:10%">
-				<col style="width:10%">
-				<col style="width:8%">
-				<col style="width:8%">
-				<col style="width:8%">
-				<col style="width:5%">
-				<col style="width:5%">
-				<col style="width:20%">
+				<col style="width:6%">
+				<col style="width:6%">
+				<col style="width:6%">
+				<col style="width:6%">
+				<col style="width:6%">
+				<col style="width:6%">
+				<col style="width:6%">
+				<col style="width:15%">
 			</colgroup>
 			<thead>
 			    <tr>
@@ -190,13 +190,13 @@
 		            </td>
 		            <td class='mytd text-left'>
 		            	{% if vex_operation.start_command%}
-		            		<button type="button" id="btn_start_{{vex_operation.id}}" class="btn btn-success" {% if vex_operation.status_flag %}style="display: none;"{%endif%} data-loading-text="Starting..." autocomplete="off" onclick="operation('start','{{vex_operation.id}}','btn_start_{{vex_operation.id}}', 'true', '{{vex_operation.perf_config.test_type}}')">Start</button>
+		            		<button type="button" id="btn_start_{{vex_operation.id}}" class="btn btn-success" {% if vex_operation.status_flag %}style="display: none;"{%endif%} data-loading-text="Starting..." autocomplete="off" onclick="operation('start','{{vex_operation.id}}','btn_start_{{vex_operation.id}}', 'true', '{{vex_operation.perf_config.test_type}}')"><span class="glyphicon glyphicon-play"></span> Start</button>
 						{% endif %}
 						{% if vex_operation.stop_command %}
-						    <button type="button" id="btn_stop_{{vex_operation.id}}" class="btn btn-primary" {% if not vex_operation.status_flag %}style="display: none;"{%endif%} data-loading-text="Stoping..." autocomplete="off" onclick="operation('stop','{{vex_operation.id}}','btn_stop_{{vex_operation.id}}', 'true', '{{vex_operation.perf_config.test_type}}')">Stop</button>
+						    <button type="button" id="btn_stop_{{vex_operation.id}}" class="btn btn-primary" {% if not vex_operation.status_flag %}style="display: none;"{%endif%} data-loading-text="Stoping..." autocomplete="off" onclick="operation('stop','{{vex_operation.id}}','btn_stop_{{vex_operation.id}}', 'true', '{{vex_operation.perf_config.test_type}}')"><span class="glyphicon glyphicon-stop"></span> Stop</button>
 						{% endif%}
 						{% if vex_operation.result_collect_command %}
-							<button type="button" id="btn_result_{{vex_operation.id}}" class="btn btn-info" data-loading-text="Collecting..." onclick="operation('result','{{vex_operation.id}}','btn_result_{{vex_operation.id}}', 'true', '{{vex_operation.perf_config.test_type}}')">Result</button>
+							<button type="button" id="btn_result_{{vex_operation.id}}" class="btn btn-warning" data-loading-text="Collecting..." onclick="operation('result','{{vex_operation.id}}','btn_result_{{vex_operation.id}}', 'true', '{{vex_operation.perf_config.test_type}}')"><span class="glyphicon glyphicon-save"></span> Result</button>
 						{% endif%}
 		            </td>
 		        </tr>
