--- a/src/perfui/templates/perfui/include/nav.html
+++ b/src/perfui/templates/perfui/include/nav.html
@@ -13,8 +13,9 @@
 		</div>
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li class="active1"><a href="{% url 'home' %}">&nbsp&nbsp<span class="glyphicon glyphicon-home">Home</span>&nbsp&nbsp</a></li>
-				<li><a href="{% url 'op-home' %}">&nbsp&nbsp<span class="glyphicon glyphicon-briefcase">Operation</span>&nbsp&nbsp</a></li>
+				<!--<li class="active1"><a href="{% url 'home' %}">&nbsp&nbsp<span class="glyphicon glyphicon-home">Home</span>&nbsp&nbsp</a></li>-->
+				<li><a href="{% url 'basic-op-home' %}">&nbsp&nbsp<span class="glyphicon glyphicon-cloud">Environment&nbsp&nbsp</span></a></li>
+				<li><a href="{% url 'perf-op-home' %}">&nbsp&nbsp<span class="glyphicon glyphicon-briefcase">Operation&nbsp&nbsp</span></a></li>
 				<li class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">&nbsp&nbsp<span class="glyphicon glyphicon-stats">Result</span><span class="caret"></span>&nbsp&nbsp</a>
 		          <ul class="dropdown-menu">
