--- a/src/perfui/templates/perfui/basic_operation.html
+++ b/src/perfui/templates/perfui/basic_operation.html
@@ -41,91 +41,13 @@
 		    }
 	    });
 	     
-	    setInterval("getStatus('bop/status')", 30000);
+	    setInterval("getBasicCompontentStatus()", 30000);
 	    getBasicCompontentStatus();
 	});
 	
-	function getStatus(url) {
-        $.ajax({  
-            url: url,  
-            type: 'Get',            
-            success: function (data) {
-            	for(var o in data){
-            		if (data[o].status == 0){
-            			$("#op_status_" + data[o].id).html("Running");
-            			$("#btn_start_" + data[o].id).hide();
-            			$("#btn_stop_" + data[o].id).show();
-            		}else if (data[o].status == 1){
-            			$("#btn_stop_" + data[o].id).hide();
-            			$("#btn_start_" + data[o].id).show();
-            			$("#op_status_" + data[o].id).html("Stopped");
-            		}else{
-            		}
-                } 
-            }  
-        });  
-    }  
-	
-	function ucfirst(str) {
-		var str = str.toLowerCase();
-		str = str.replace(/\b\w+\b/g, function(word){
-		  return word.substring(0,1).toUpperCase()+word.substring(1);
-		});
-		return str;
-	}
-	
-	function operation(op_tag, op_id, btn_id, is_vex_operation, test_type){
-		var timeout = 120000;
-		var btn = $("#" + btn_id);
-		btn.button('loading');
-		
-		$.ajax({ 
-	           type: "get", 
-               url: "/op/execute?op_tag=" + op_tag + "&op_id=" + op_id + "&vex_op=" + is_vex_operation,
-               dataType: "json",
-               timeout:timeout,
-               success: function (data) { 
-            	   if(data["status_code"] == 200){
-            		   if (op_tag == "result"){
-            			    window.location = "/result/" + test_type;
-            		   }else{
-		   					bootbox.alert({
-		   						title: "<p><strong class='text-info'>" + ucfirst(op_tag) + " Succeed</p>",
-		   						message: "<p><strong class='text-success'>" + data["message"] + "</p>",
-		   					    size: 'large'
-		   					});
-		   					btn.button('reset');
-		   					
-		   					if(op_tag=="start" && is_vex_operation=="true"){
-		   						$("#op_status_" + op_id).html("Running");
-		   						$("#btn_start_" + op_id).hide();
-		   						$("#btn_stop_" + op_id).show();
-		   					}
-		   					
-		   					if(op_tag=="stop" && is_vex_operation=="true"){
-		   						$("#op_status_" + op_id).html("Stopped");
-		   						$("#btn_start_" + op_id).show();
-		   						$("#btn_stop_" + op_id).hide();
-		   					}
-            	        }
-	   				}else{
-	   					bootbox.alert({
-	   						title: "<p><strong class='text-info'>" + ucfirst(op_tag) + " Failure</p>",
-	   						message: "<p><strong class='text-danger'>" + data["message"] + "</p>",
-	   					    size: 'large'
-	   					});
-	   					btn.button('reset');
-	   				}
-               },
-               error: function(){
-            	   bootbox.alert({
-	   					title: "<p><strong class='text-info'>" + ucfirst(op_tag) + " Failure</p>",
-	   					message: "<p><strong class='text-danger'>Operation timeout. Please check status manually.</p>",
-	   				    size: 'large'
-	   				});
-	   				btn.button('reset');
-               }
-       });
+	function getBasicCompontentStatus(){
+		url = "/bop/status";
+		getStatus(url);
 	}
 </script>
 {% endblock%}
