--- a/src/perfui/templates/perfui/perf_operation.html
+++ b/src/perfui/templates/perfui/perf_operation.html
@@ -112,13 +112,13 @@
 		            </td>
 		            <td class='mytd text-left'>
 		            	{% if vex_operation.start_command%}
-		            		<button type="button" id="btn_start_{{vex_operation.id}}" class="btn btn-success" {% if vex_operation.status_flag %}style="display: none;"{%endif%} data-loading-text="Starting..." autocomplete="off" onclick="operation('start','{{vex_operation.id}}','btn_start_{{vex_operation.id}}', 'true', '{{vex_operation.perf_config.test_type}}')"><span class="glyphicon glyphicon-play"></span> Start</button>
+		            		<button type="button" id="btn_start_{{vex_operation.id}}" class="btn btn-success" {% if vex_operation.status_flag %}style="display: none;"{%endif%} data-loading-text="Starting..." autocomplete="off" onclick="operation('start','{{vex_operation.id}}','btn_start_{{vex_operation.id}}', 'true', '{{vex_operation.perf_config.test_type}}','false')"><span class="glyphicon glyphicon-play"></span> Start</button>
 						{% endif %}
 						{% if vex_operation.stop_command %}
-						    <button type="button" id="btn_stop_{{vex_operation.id}}" class="btn btn-primary" {% if not vex_operation.status_flag %}style="display: none;"{%endif%} data-loading-text="Stoping..." autocomplete="off" onclick="operation('stop','{{vex_operation.id}}','btn_stop_{{vex_operation.id}}', 'true', '{{vex_operation.perf_config.test_type}}')"><span class="glyphicon glyphicon-stop"></span> Stop</button>
+						    <button type="button" id="btn_stop_{{vex_operation.id}}" class="btn btn-primary" {% if not vex_operation.status_flag %}style="display: none;"{%endif%} data-loading-text="Stoping..." autocomplete="off" onclick="operation('stop','{{vex_operation.id}}','btn_stop_{{vex_operation.id}}', 'true', '{{vex_operation.perf_config.test_type}}','false')"><span class="glyphicon glyphicon-stop"></span> Stop</button>
 						{% endif%}
 						{% if vex_operation.result_collect_command %}
-							<button type="button" id="btn_result_{{vex_operation.id}}" class="btn btn-info" data-loading-text="Collecting..." onclick="operation('result','{{vex_operation.id}}','btn_result_{{vex_operation.id}}', 'true', '{{vex_operation.perf_config.test_type}}')"><span class="glyphicon glyphicon-save"></span> Result</button>
+							<button type="button" id="btn_result_{{vex_operation.id}}" class="btn btn-info" data-loading-text="Collecting..." onclick="operation('result','{{vex_operation.id}}','btn_result_{{vex_operation.id}}', 'true', '{{vex_operation.perf_config.test_type}}','false')"><span class="glyphicon glyphicon-save"></span> Result</button>
 						{% endif%}
 		            </td>
 		        </tr>
@@ -127,59 +127,5 @@
 		</table>
 	</div>
 	<div class="divider"><h5 class="page-header"></h5></div>
-</div>
-
-<div class="row col-sm-12 col-md-12">
-	<p><strong class="text-success">Test Tool Operation</strong></p>
-</div>
-<div class="row col-sm-12 col-md-12">
-    {% for sub_operation_list in operation_list %}
-    {% if sub_operation_list %}
-	<div class="col-sm-6 col-md-6">
-		 <div class="caption">
-			<table id="operations" data-toggle="table" class="table table-striped table-bordered table-hover">
-				<colgroup>
-					<col style="width:60%">
-					<col style="width:40%">
-				</colgroup>
-				<thead>
-				    <tr>
-				      <th class='text-center'>Name</th>
-				      <th class='text-center'>Action</th>
-				     </tr>
-				</thead>
-				<tbody>
-				    {% for basic_operation in sub_operation_list %}
-				    {% if forloop.counter|divisibleby:"2" %}
-					    <tr class="success text-center">
-					{% elif forloop.counter|divisibleby:"3" %}
-					    <tr class="active text-center">
-					{% else %}
-					    <tr class="warning text-center">
-					{% endif %}
-			            <td class='text-left'>{{ basic_operation.name }}</td>
-			            <td class='text-left'>
-			            	{% if basic_operation.start_command %}
-			            		{% if basic_operation.stop_command %}
-			            			<button type="button" id="btn_start_op_{{basic_operation.id}}" class="btn btn-success" data-loading-text="Starting..." autocomplete="off" onclick="operation('start','{{basic_operation.id}}','btn_start_op_{{basic_operation.id}}', 'false','')">Start</button>
-								{% else %}
-									<button type="button" id="btn_start_op_{{basic_operation.id}}" class="btn btn-success" data-loading-text="Running" autocomplete="off" onclick="operation('run','{{basic_operation.id}}','btn_start_op_{{basic_operation.id}}', 'false','')">Run</button>
-								{% endif %}
-							{% endif %}
-							{% if basic_operation.stop_command %}
-								<button type="button" id="btn_stop_op_{{basic_operation.id}}" class="btn btn-primary" data-loading-text="Stoping..." autocomplete="off" onclick="operation('stop','{{basic_operation.id}}','btn_stop_op_{{basic_operation.id}}', 'false','')">Stop</button>
-							{% endif%}
-							{% if basic_operation.status_command %}
-								<button type="button" id="btn_status_op_{{basic_operation.id}}" class="btn btn-info" data-loading-text="Getting status..." onclick="operation('status','{{basic_operation.id}}','btn_status_op_{{basic_operation.id}}', 'false','')">Status</button>
-							{% endif%}
-			            </td>
-			        </tr>
-			        {% endfor %}
-				 </tbody>
-			</table>
-		</div>
-	</div>
-	{% endif %}
-	{% endfor %}
 </div>
 {% endblock%}
