--- a/src/perfui/templates/perfui/perf_operation.html
+++ b/src/perfui/templates/perfui/perf_operation.html
@@ -54,9 +54,18 @@
 {% endblock%}
 
 {% block main %}
-<div class="divider"><h6 class="page-header"></h6></div>
-<div class="row col-sm-12 col-md-12">
-	<p><strong class="text-success">VEX Performance Test Operation</strong></p>
+<row class="col-sm-12 col-md-12">
+    <div class="panel panel-success">
+	    <div class="panel-heading">
+			<h3 class="panel-title">Benchmark Test Environment</h3>
+		</div>
+		<div class="panel-body">
+			<p class="text-success">This page is to run performance test and collect test result in time.</p>
+		</div>
+    </div>
+</row>
+
+<row class="col-sm-12 col-md-12">
 	 <div class="caption">
 		<table id="vex_operations" data-toggle="table" class="table table-striped table-bordered table-hover">
 			<colgroup>
@@ -127,5 +136,5 @@
 		</table>
 	</div>
 	<div class="divider"><h5 class="page-header"></h5></div>
-</div>
+</row>
 {% endblock%}
