show operation by group

--- a/src/perfui/templates/perfui/basic_operation.html
+++ b/src/perfui/templates/perfui/basic_operation.html
@@ -59,7 +59,7 @@
 		<h3 class="panel-title">Benchmark Test Environment Settings</h3>
 	</div>
 	<div class="panel-body">
-		This page is to setup test environement. Typically action is to depoloy, start or stop defined components.
+		<p class="text-success">This page is to setup test environment. Typically action is to deploy, start or stop defined VEX component and start or stop simulator.</p>
 	</div>
 </div>
 </row>
@@ -77,7 +77,7 @@
 				</colgroup>
 				<thead>
 				    <tr>
-				      <th class='text-center'>Name</th>
+				      <th class='text-center'>Component</th>
 				      <th class='text-center'>Status</th>
 				      <th class='text-center'>Action</th>
 				     </tr>
