--- a/src/perfui/templates/perfui/base.html
+++ b/src/perfui/templates/perfui/base.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="/static/img/favicon.ico"/>
     <link rel="bookmark" href="/static/img/favicon.ico"/>
     <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/bootstrap/css/bootstrap-editable.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/jquery/jquery.Jcrop.min.css">
 
     <script src="/static/jquery/jquery-2.1.3.min.js"></script>
@@ -15,18 +16,15 @@
     <script src="/static/jquery/jquery.Jcrop.min.js"></script>
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
     <script src="/static/bootstrap/js/bootbox.min.js"></script>
+    <script src="/static/bootstrap/js/bootstrap-editable.min.js"></script>
     
     <script type="text/javascript" src="/static/armchart/amcharts.js"></script>
 	<script type="text/javascript" src="/static/armchart/serial.js"></script>
-	
-	<link href="http://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
 	
 	<script type="text/javascript" src="/static/vex/vex.js"></script>
 	
 	{% block header %}  {% endblock%}
     {% block css%}  {% endblock%}
-
 </head>
 <body id="loadtestContent">
     <!-- Nav bar -->
