show operation by group

--- a/src/perfui/templates/perfui/perf_operation.html
+++ b/src/perfui/templates/perfui/perf_operation.html
@@ -60,7 +60,7 @@
 			<h3 class="panel-title">Benchmark Test Environment</h3>
 		</div>
 		<div class="panel-body">
-			<p class="text-success">This page is to run performance test and collect test result in time.</p>
+			<p class="text-success">This page is to start or stop VEX benchmark test, then collect benchmark test result in time.</p>
 		</div>
     </div>
 </row>
