--- a/src/perfui/templates/perfui/perf_operation.html
+++ b/src/perfui/templates/perfui/perf_operation.html
@@ -78,7 +78,7 @@
 				<col style="width:6%">
 				<col style="width:15%">
 			</colgroup>
-			<thead>
+			<thead >
 			    <tr>
 			      <th class='text-center'>Name</th>
 			      <th class='text-center'>Test Type</th>
@@ -90,7 +90,7 @@
 			      <th class='text-center'>Action</th>
 			     </tr>
 			</thead>
-			<tbody>
+			<tbody class="text-info">
 			    {% for vex_operation in vex_operation_list %}
 			    <tr class="success text-center">
 			    {% if forloop.counter|divisibleby:"2" %}
